fixup on code analysis warnings